// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App matches the snapshot when not showing navigation 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <div
      className="App-header-left"
    >
      <img
        alt="App logo"
        className="App-logo"
        src="rangweatherlogo.png"
      />
      <h1>
        RangWeather
      </h1>
    </div>
    <div
      className="App-header-right"
    >
      <i
        className="fas fa-bars"
        onClick={[Function]}
      />
    </div>
  </header>
  <main
    className="App-main"
  >
    <Switch>
      <Route
        exact={true}
        path="/"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/forecast"
        render={[Function]}
      />
    </Switch>
  </main>
</div>
`;

exports[`App matches the snapshot when showNav is set to true 1`] = `
<div
  className="App"
>
  <nav
    className="App-nav"
  >
    <NavLink
      className="nav-link"
      onClick={[Function]}
      to="/"
    >
      Home
    </NavLink>
    <hr />
    <NavLink
      className="nav-link"
      onClick={[Function]}
      to="/forecast"
    >
      Forecast
    </NavLink>
  </nav>
  <header
    className="App-header"
  >
    <div
      className="App-header-left"
    >
      <img
        alt="App logo"
        className="App-logo"
        src="rangweatherlogo.png"
      />
      <h1>
        RangWeather
      </h1>
    </div>
    <div
      className="App-header-right"
    >
      <i
        className="fas fa-bars"
        onClick={[Function]}
      />
    </div>
  </header>
  <main
    className="App-main"
  >
    <Switch>
      <Route
        exact={true}
        path="/"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/forecast"
        render={[Function]}
      />
    </Switch>
  </main>
</div>
`;
